Fix problem with font

--- a/public/new-assets/less/base.css
+++ b/public/new-assets/less/base.css
@@ -11,7 +11,7 @@
 *******************************/
 
 /* Border-Box */
-@import url('https://fonts.googleapis.com/css?family=Lato:400,200,300,600,700,400italic,700italic,900,900italic|'Antic Slab', serif:400,200,300,600,700,400italic,700italic,900,900italic&subset=latin');
+@import url("https://fonts.googleapis.com/css?family=Lato:400,200,300,600,700,400italic,700italic,900,900italic|'Antic Slab', serif:400,200,300,600,700,400italic,700italic,900,900italic&subset=latin");
 *,
 *:before,
 *:after {
