--- a/public/new-assets/less/base.css
+++ b/public/new-assets/less/base.css
@@ -199,7 +199,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #262626;
-  background-color: #fafafa;
+  background-color: #ffffff;
 }
 
 
