--- a/public/css/scss/share-venue.css
+++ b/public/css/scss/share-venue.css
@@ -10,4 +10,32 @@
   opacity: 1;
 }
 
+/* line 13, git/spokoloko-repo/public/css/scss/share-venue.scss */
+#pagination .pagination-list {
+  list-style-type: none;
+  display: flex;
+}
+
+/* line 16, git/spokoloko-repo/public/css/scss/share-venue.scss */
+#pagination .pagination-list li {
+  color: #aaa;
+  padding: 0;
+  margin: 0 0.5em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+}
+
+/* line 35, git/spokoloko-repo/public/css/scss/share-venue.scss */
+#pagination .pagination-list li::before {
+  content: '';
+}
+
+/* line 38, git/spokoloko-repo/public/css/scss/share-venue.scss */
+#pagination .pagination-list li.pagination-active {
+  font-weight: 700;
+  color: #F57C00;
+}
+
 /*# sourceMappingURL=share-venue.css.map */
