--- a/public/css/scss/share-venue.scss
+++ b/public/css/scss/share-venue.scss
@@ -13,14 +13,12 @@
     .pagination-list {
         list-style-type: none;
         display: flex;
+        justify-content: space-around;
         li {
-            color: #aaa;
-            padding: 0;
+            padding: 0 0.5em;
             margin: 0 0.5em;
             display: flex;
             align-items: center;
-            text-align: center;
-            font-weight: 400;
             // &::before {
             //     content: '';
             //     width: 1px;
@@ -34,10 +32,16 @@
             // }
             &::before{
                 content: '';
+                border-radius: 50%;
+                display: inline-block;
+                background-color: #aaa;
+                width: 1em;
+                height: 1em;
             }
             &.pagination-active {
-                font-weight: 700;
-                color: #F57C00;
+                &::before{
+                    background-color: #F57C00;
+                }
             }
         }
     }
