--- a/public/css/scss/share-venue.scss
+++ b/public/css/scss/share-venue.scss
@@ -1,4 +1,5 @@
 .add-listing-content {
+    margin-bottom: 120px;
     &:not(.active-block) {
         display: none;
         opacity: 0;
@@ -7,40 +8,56 @@
         display: block;
         opacity: 1;
     }
+    .image-inner {
+        width: 100%;
+        height: 100%;
+        .map-wrapper {
+            position: relative;
+            top: 0;
+            transform: translateY(0);
+            #map {
+
+            }
+        }
+        .sticky-img {
+            width: 100%;
+            height: auto;
+            position: sticky;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0;
+            right: 0;
+        }
+    }
 }
 
-#pagination {
-    .pagination-list {
-        list-style-type: none;
-        display: flex;
-        justify-content: space-around;
-        li {
-            padding: 0 0.5em;
-            margin: 0 0.5em;
+.add-listing-footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: white;
+    #pagination {
+        .pagination-list {
+            list-style-type: none;
             display: flex;
-            align-items: center;
-            // &::before {
-            //     content: '';
-            //     width: 1px;
-            //     background-color: #aaa;
-            //     height: 90%;
-            //     top: 10%;
-            //     left: 10%;
-            //     &:not(:first-of-type) {
-            //         display: none;
-            //     }
-            // }
-            &::before{
-                content: '';
-                border-radius: 50%;
-                display: inline-block;
-                background-color: #aaa;
-                width: 1em;
-                height: 1em;
-            }
-            &.pagination-active {
+            justify-content: space-around;
+            li {
+                padding: 0 0.5em;
+                margin: 0 0.5em;
+                display: flex;
+                align-items: center;
                 &::before{
-                    background-color: #F57C00;
+                    content: '';
+                    border-radius: 50%;
+                    display: inline-block;
+                    background-color: #aaa;
+                    width: 1em;
+                    height: 1em;
+                }
+                &.pagination-active {
+                    &::before{
+                        background-color: #F57C00;
+                    }
                 }
             }
         }
