--- a/public/css/scss/share-venue.css
+++ b/public/css/scss/share-venue.css
@@ -1,32 +1,69 @@
-/* line 2, git/spokoloko-repo/public/css/scss/share-venue.scss */
+/* line 1, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-content {
+  margin-bottom: 120px;
+}
+
+/* line 3, git/spokoloko-repo/public/css/scss/share-venue.scss */
 .add-listing-content:not(.active-block) {
   display: none;
   opacity: 0;
 }
 
-/* line 6, git/spokoloko-repo/public/css/scss/share-venue.scss */
+/* line 7, git/spokoloko-repo/public/css/scss/share-venue.scss */
 .add-listing-content .active-block {
   display: block;
   opacity: 1;
 }
 
-/* line 13, git/spokoloko-repo/public/css/scss/share-venue.scss */
-#pagination .pagination-list {
+/* line 11, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-content .image-inner {
+  width: 100%;
+  height: 100%;
+}
+
+/* line 14, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-content .image-inner .map-wrapper {
+  position: relative;
+  top: 0;
+  transform: translateY(0);
+}
+
+/* line 22, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-content .image-inner .sticky-img {
+  width: 100%;
+  height: auto;
+  position: sticky;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+}
+
+/* line 34, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  background-color: white;
+}
+
+/* line 40, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-footer #pagination .pagination-list {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
 }
 
-/* line 17, git/spokoloko-repo/public/css/scss/share-venue.scss */
-#pagination .pagination-list li {
+/* line 44, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-footer #pagination .pagination-list li {
   padding: 0 0.5em;
   margin: 0 0.5em;
   display: flex;
   align-items: center;
 }
 
-/* line 33, git/spokoloko-repo/public/css/scss/share-venue.scss */
-#pagination .pagination-list li::before {
+/* line 49, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-footer #pagination .pagination-list li::before {
   content: '';
   border-radius: 50%;
   display: inline-block;
@@ -35,8 +72,8 @@
   height: 1em;
 }
 
-/* line 42, git/spokoloko-repo/public/css/scss/share-venue.scss */
-#pagination .pagination-list li.pagination-active::before {
+/* line 58, git/spokoloko-repo/public/css/scss/share-venue.scss */
+.add-listing-footer #pagination .pagination-list li.pagination-active::before {
   background-color: #F57C00;
 }
 
