ja zakomitil zmiany

--- a/public/new-assets/less/variables.less
+++ b/public/new-assets/less/variables.less
@@ -169,7 +169,7 @@
 
 // -- LINKS
 
-//@linkColor           : #F0114C;
+//@linkColor           : #F57C00;
 @linkUnderline       : none;
 //@linkHoverColor      : darken(saturate(@linkColor, 20), 15, relative);
 @linkHoverUnderline  : @linkUnderline;
@@ -402,10 +402,10 @@
 // -- Focused Input
 
 // Used on inputs, textarea etc
-@focusedFormBorderColor: @accentColor; //#F0114C; //#85B7D9;
+@focusedFormBorderColor: @accentColor; //#F57C00; //#85B7D9;
 
 // Used on dropdowns, other larger blocks
-@focusedFormMutedBorderColor: @accentColor; //#F0114C; //#96C8DA;
+@focusedFormMutedBorderColor: @accentColor; //#F57C00; //#96C8DA;
 
 
 
@@ -583,11 +583,11 @@
 
 // --SITE COLOR VARIABLE
 
-@accentColor:               #FD386C; //#26D0AA;
+@accentColor:               #F57C01; //#26D0AA;
 @headingColor:              @textColor; //#3d4d65;
 @textColor:                 #262626; //#414141; //#8493a8; //gray;
 @textSecondaryColor:        gray;
-@linkColor:                 #F0114C;
+@linkColor:                 #F57C00;
 @linkHoverColor:            inherit; //You should not change this value
 @backgroundColor:           #fafafa; //white; //#fafafa; //transparent; //white;
 @borderColor:               #D4D4D4; //#CAD3DF; //#eee;
@@ -612,7 +612,7 @@
 @headerHeadingColor:        @headingColor;
 @headerTextColor:           #414141;
 @headerTextSecondaryColor:  @textSecondaryColor;
-@headerLinkColor:           #F0114C; //@linkColor;
+@headerLinkColor:           #F57C00; //@linkColor;
 @headerLinkHoverColor:      black;
 @headerBackgroundColor:     pink; //#fff;
 @headerBorderColor:         rgba(140,140,140,.2);
