--- a/public/css/scss/share/share-venue.scss
+++ b/public/css/scss/share/share-venue.scss
@@ -1,3 +1,6 @@
+$orange: #FF5722;
+$grey: #aaa;
+
 .add-listing-content {
     margin-bottom: 120px;
     &:not(.active-block) {
@@ -50,14 +53,65 @@
                     content: '';
                     border-radius: 50%;
                     display: inline-block;
-                    background-color: #aaa;
+                    background-color: $grey;
                     width: 1em;
                     height: 1em;
                 }
                 &.pagination-active {
                     &::before{
-                        background-color: #F57C00;
+                        background-color: $orange;
                     }
+                }
+            }
+        }
+    }
+}
+
+.description-sq {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.week-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 3%;
+    .day {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        flex-direction: column;
+        margin: 0 0.5%;
+        .day-btn {
+            width: 5em;
+            height: 4em;
+            background-color: $grey;
+            transition: background-color 200ms cubic-bezier(.45,.05,.55,.95);
+            border: 0;
+            outline: 0;
+            &::-moz-focus-inner {
+                border: 0;
+            }
+            &:hover {
+                background-color: #252525;
+            }
+        }
+        .label {
+            font-size: 0.8em;
+        }
+        .hours-available {
+            visibility: hidden;
+            display: flex;
+            opacity: 0;
+            align-self: center;
+            flex-wrap: nowrap;
+            flex-direction: column;
+            width: 5em;
+            height: auto;
+            .divided-column {
+                input {
+
                 }
             }
         }
