add photo works on single selects, need to improve displaying new photos

--- a/public/css/scss/share/share-venue.css
+++ b/public/css/scss/share/share-venue.css
@@ -83,18 +83,23 @@
   padding-bottom: 30px;
 }
 
-/* line 79, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 76, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+.photo-upload > div {
+  justify-content: space-around;
+}
+
+/* line 80, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .photo-upload .photo-upload-item:not(#add-photo) {
   cursor: pointer;
   transition: all 200ms ease;
 }
 
-/* line 85, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 86, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .photo-upload .photo-upload-item:not(#add-photo):hover {
   transform: scale(1.1);
 }
 
-/* line 87, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 88, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .photo-upload .photo-upload-item:not(#add-photo):hover .remove {
   border-color: #DB2828;
   border-width: thin;
@@ -102,20 +107,30 @@
   text-decoration: none;
 }
 
-/* line 93, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 94, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .photo-upload .photo-upload-item:not(#add-photo):hover .remove i {
   color: #DB2828;
 }
 
-/* line 99, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 100, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .photo-upload .photo-upload-item:not(#add-photo) .image-wrapper img {
-  width: 250px !important;
-  height: 250px !important;
+  width: auto !important;
+  height: 100% !important;
   top: 0 !important;
   margin-top: 0 !important;
 }
 
 /* line 109, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+.photo-upload #add-photo input[type="file"] {
+  display: none;
+}
+
+/* line 112, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+.photo-upload #add-photo .custom-file-upload {
+  cursor: pointer;
+}
+
+/* line 121, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group {
   display: flex;
   flex-direction: row;
@@ -123,7 +138,7 @@
   margin-bottom: 3%;
 }
 
-/* line 114, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 126, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day {
   display: flex;
   flex-wrap: nowrap;
@@ -132,7 +147,7 @@
   margin: 0 0.5%;
 }
 
-/* line 120, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 132, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day .day-btn {
   width: 5em;
   height: 4em;
@@ -142,22 +157,22 @@
   outline: 0;
 }
 
-/* line 127, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 139, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day .day-btn::-moz-focus-inner {
   border: 0;
 }
 
-/* line 130, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 142, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day .day-btn:hover {
   background-color: #252525;
 }
 
-/* line 134, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 146, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day .label {
   font-size: 0.8em;
 }
 
-/* line 137, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
+/* line 149, git/spokoloko-repo/public/css/scss/share/share-venue.scss */
 .week-group .day .hours-available {
   visibility: hidden;
   display: flex;
